--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "rootDir": "src",
     "outDir": "out-tsc",
     "module": "commonjs",
     "target": "es5",
@@ -10,7 +9,7 @@
       "es2015",
       "dom"
     ],
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"]
   },
   "exclude": [
     "node_modules"
