--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@types/angular-material": "1.1.58",
     "@types/jasmine": "2.8.6",
     "@types/node": "9.4.6",
-    "awesome-typescript-loader": "3.5.0",
     "clean-webpack-plugin": "0.1.18",
     "css-loader": "0.28.10",
     "file-loader": "1.1.11",
@@ -55,6 +54,7 @@
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.20.2",
+    "ts-loader": "4.0.1",
     "typescript": "2.7.2",
     "url-loader": "0.6.2",
     "webpack": "4.0.1",
